--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "lucide-react": "^0.562.0",
     "motion": "^12.26.0",
     "react": "^19.2.0",
+    "react-activity-calendar": "^3.1.1",
     "react-dom": "^19.2.0",
+    "react-github-calendar": "^5.0.5",
+    "react-leetcode-calendar": "^2.6.5",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.4.0"
   },
